WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152524
[TexMap] BitmapTextureGL is not released while scene is updated continuously.
https://bugs.webkit.org/show_bug.cgi?id=152524
Summary
[TexMap] BitmapTextureGL is not released while scene is updated continuously.
Yonggeol Jung
Reported
2015-12-22 20:35:16 PST
BitmapTextureGL is not released while scene is updated continuously.
Attachments
patch
(2.06 KB, patch)
2015-12-22 21:06 PST
,
Yonggeol Jung
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yonggeol Jung
Comment 1
2015-12-22 21:06:21 PST
Created
attachment 267827
[details]
patch
Zan Dobersek
Comment 2
2016-01-13 01:44:32 PST
Comment on
attachment 267827
[details]
patch r=me
WebKit Commit Bot
Comment 3
2016-01-13 02:32:45 PST
Comment on
attachment 267827
[details]
patch Clearing flags on attachment: 267827 Committed
r194961
: <
http://trac.webkit.org/changeset/194961
>
WebKit Commit Bot
Comment 4
2016-01-13 02:32:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug